--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -50,15 +50,14 @@ body {
 			padding: 0.5em;
 
 			i {
-				padding: .3em;
+				padding: 0.3em;
 				margin-right: 0.7em;
 				font-size: 1.7rem;
-				transition: color .2s;
+				transition: color 0.2s;
 
 				&:hover {
 					color: white;
 				}
-
 			}
 		}
 
@@ -66,7 +65,9 @@ body {
 			padding: 1em;
 			min-height: 130px;
 			max-height: 200px;
+			min-width: 233px;
 			max-width: 233px;
+			word-break: break-all;
 			overflow-y: scroll;
 		}
 	}
@@ -87,7 +88,7 @@ body {
 	-moz-box-shadow: 0px 0px 12px 0px rgba(219, 219, 227, 1);
 	box-shadow: 0px 0px 12px 0px rgba(219, 219, 227, 1);
 	opacity: 0;
-	transition: opacity .2s;
+	transition: opacity 0.2s;
 	z-index: -10;
 
 	&__title {
@@ -123,5 +124,29 @@ body {
 		&-left {
 			margin-right: 1em;
 		}
+	}
+}
+
+.purple {
+	background-color: slateblue;
+
+	.main__note-top {
+		background-color: hsl(248, 38%, 45%);
+	}
+}
+
+.blue {
+	background-color: royalblue;
+
+	.main__note-top {
+		background-color: rgb(41, 67, 145);
+	}
+}
+
+.green {
+	background-color: mediumseagreen;
+
+	.main__note-top {
+		background-color: rgb(44, 133, 84);
 	}
 }
